--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,14 +46,20 @@ body{
   background: #9d9dab; 
 }
 
+#sect a{
+    
+}
+
 #sect a.active {
-  background-color: #f1643c;
-  color: white;
+  color: #f1643c;
+  font-weight: bolder;
+  font-size: 22px;
 }
 
 #sect  a:hover:not(.active){
-  background-color: #555;
-  color: white;
+  color: #555;
+  font-size: 18px;
+  font-weight: bold;
   }
   
 .display-text{
@@ -75,19 +81,20 @@ body{
 .main h2{
 				padding-left:20px;
 				color: #121d6e;
-				font-family: Georgia;
+				font-family: "Oswald", Georgia;
 				padding-bottom: -10px;
 }
 
 .main h4{
 				padding-left:20px;
-				color: #121d6e;
-				font-family: Georgia;
+				color: #f26e28;
+				font-family: arial;
 				padding-bottom: -10px;
+				font-weight: bold;
 }
 
 .details{
-				background-color: #ffffff, 1;
+				background-color: #ffffff;
 				width: 95%;
 				border: 0px solid #121d6e;
 				border-radius: 5px;
@@ -97,13 +104,13 @@ body{
 				min-height: 300px;
 				max-height: 350px;
 				overflow: scroll;
-				box-shadow: 2px 3px 10px #565e94;
+				box-shadow: 1px 1px 5px #565e94;
 }
 
 .detailse{
-				max-height: 600px;
-				background-color: #ffffff, 1;
-				width: 95%;
+				max-height: 400px;
+				background-color: #f6f6f6;
+				width: 90%;
 				border: 0px solid #121d6e;
 				border-radius: 5px;
 				margin: 20px auto;				
@@ -112,7 +119,7 @@ body{
 				min-height: 300px;
 				
 				overflow: scroll;
-				box-shadow: 2px 3px 10px #565e94;
+				box-shadow: 1px 1px 5px #565e94;
 }
 
 .detailse p{
@@ -133,8 +140,8 @@ body{
 				padding-left: 10px;
 				padding-bottom: 10px;
 				letter-spacing: 0.3px;
-				color: #606060;
-				line-height: 1.6;
+				color: #212121;
+				line-height: 1.6; 
 }
 .detailse h3{
 				text-align: center;
@@ -176,15 +183,18 @@ hr.rounded {
    
 				color: #121d6e ;
 				padding-left: 20px;
+				font-weight: bold;
+				font-size: 20px;
 				font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .location h5,a{
-				padding-left: 20px;
+				padding-left: 10px;
 				text-indent: 35px;
 				margin-top: -15px;
 				font-family: Arial;
 				color: #ff5415;
+				line-height: 30px;
 				text-decoration: none;
 }
 
@@ -192,10 +202,7 @@ hr.rounded {
 				width: 50%;
 				padding-left: 10px;
 				margin: 5px 25%;
-				align-items: center;
-				display: flex;
-		  	  flex-direction: row;
-		  	  justify-content: ceter;
+				text-align: center;
 }
 
 .contacts img{
@@ -206,32 +213,33 @@ hr.rounded {
 
 .contact1, .contact2, .contact3{
 				padding: 10px 10px;
-				display: inline;
+				display: inine;
 				float: lt;
 }
 
 .hot{
 				background-color: white;
 				max-width: 300px;
-				margin: 7px 0 0 15px;
+				margin: 7px 0 0 35px;
 				border: 0 solid white;
 				border-radius: 5px;
 				padding-top: 3px;
 }
 .hot h2{
-				padding-left: 15px;
-				padding-bottom: -25px;
+				padding-left: 25px;
+				padding-bottom: 15px;
 				color: #121d6e;
+				font-family: "oswald", Arial;
 }
 
 .hot a{
 				display: block;
-				padding-left: 15px;
+				margin-left: -25px;
 				text-decoration: none;
 				font-weight: bold;
 				font-size: 16px;
 				color: #ff5f2b;
-				padding-bottom: 10px;
+				padding-bottom: 20px;
 }
 
 .hot a:hover{
@@ -279,8 +287,8 @@ hr.rounded {
  				color: white;  
  				border-radius: 4px; 
  				margin:14px; 
- 				box-shadow: 3px 3px 10px grey; 
- 				padding:7px 7px 7px 7px;
+ 				box-shadow: 1px 2px 7px grey; 
+ 				padding:12px 7px 12px 7px;
  				text-decoration: none;
  				font-weight: bold;
  				max-width: 80px;
@@ -293,6 +301,26 @@ hr.rounded {
 /* message button */
 #send:hover{
 				background-color: #121d6e;
+}
+
+#myBtn{
+	display: none;
+	position: fixed;
+	bottom: 10px;
+	right: 30px;
+	z-index: 99;
+	border: none;
+	outline: none;
+	background-color: blue;
+	color: whitesmoke;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 10px;
+	font-size: 16px;
+}
+
+#myBtn:hover{
+	background-color: #555;
 }
 
 footer{
@@ -334,3 +362,4 @@ ul.breadcrumb li a:hover {
   text-decoration: underline;
 }
  */
+ 
