--- a/CSS/library.css
+++ b/CSS/library.css
@@ -1,22 +1,45 @@
 .books{
-	width: 95%;
+	width: 100%;
 	text-align: center;
 	margin: 0 auto;
+	margin-bottom: 50px;
 }
 
 .card{
     float: left;
 }
 
+.card a{
+  width: 130px;
+  background-color: #0d6efd;
+  text-decoration: none;
+  color: whitesmoke;
+  font-weight: bold;
+  padding: 10px;
+  text-align: center;
+  border: 1px solid #0d6efd;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+}
+
 .card-text{
- text-align: left;
+ text-align: center;
  padding: 0 3px;
+}
+
+.card-body{
+	box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .secttion{
 	clear: both;
-	max-width: 650px;
+	max-width: 85%;
 	margin: 0 auto;
+}
+
+.secttion h3{
+	font-weight: bold;
+	font-size: 18px;
 }
 
 .bkimg{
@@ -28,6 +51,41 @@
 	font-weight: bold;
 }
 
-.sectiions{
-	margin-top: 20px;
+.secttion{
+	margin-top: 200px;
 }
+
+.section-container{
+	max-width: 95%;
+	padding: 15px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	border-radius: 5px;
+	box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.text-center a{
+  width: 70px;
+  background-color: #ff5415;
+  text-decoration: none;
+  color: whitesmoke;
+  font-weight: bold;
+  padding: 8px;
+  text-align: center;
+  border: 1px solid #ff5415;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+}
+
+/*@media only screen and (max-width: 480px ) {
+	.secttion{
+		max-width: 300px;
+	}
+}
+
+@media only screen and (min-width: 600px ) {
+	.secttion{
+		max-width: 480px;
+	}
+}*/
