--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 body{
-				background-color: #e1e1f5;
-				font-family: didot;
+				background-color: #fbfbff;
+			 font-family: 'Kanit', sans-serif;
 				
 			  /* margin: 0 7px; */
 }		
@@ -104,7 +104,7 @@ body{
 				min-height: 300px;
 				max-height: 350px;
 				overflow: scroll;
-				box-shadow: 1px 1px 5px #565e94;
+				box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .detailse{
@@ -119,7 +119,7 @@ body{
 				min-height: 300px;
 				
 				overflow: scroll;
-				box-shadow: 1px 1px 5px #565e94;
+				box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .detailse p{
@@ -199,22 +199,14 @@ hr.rounded {
 }
 
 .contacts{
-				width: 50%;
-				padding-left: 10px;
-				margin: 5px 25%;
+				width: 90%;
+				padding-left: 5px;
+				margin: 0 auto;
 				text-align: center;
-}
-
-.contacts img{
-				border: 0 solid #ff2b4a;
-				border-radius: 15px;
-				padding: 2px;
 }
 
 .contact1, .contact2, .contact3{
 				padding: 10px 10px;
-				display: inine;
-				float: lt;
 }
 
 .hot{
@@ -326,16 +318,14 @@ hr.rounded {
 footer{
 				background-color: #121d6e;
 				text-align: center;
-				padding-bottom: 5px;
-				padding-top: -30px;
+				padding:-30px 30px 5px 30px;
+				paddng-top: -30px;
 				margin: 0 -8px 0 -8px;
 				color: white;
-				font-weight: bold;
+				font-weight: normal;
 				border-top: #ff5f2b 3px solid;
 		
 }
-
-
 
 
   /*  
