--- a/CSS/style.css
+++ b/CSS/style.css
@@ -213,19 +213,21 @@ hr.rounded {
 				border-radius: 5px;
 				padding-top: 3px;
 }
-.hot h2{
+.hot h3{
 				padding-left: 25px;
 				padding-bottom: 15px;
 				color: #121d6e;
-				font-family: "oswald", Arial;
+				font-weight: bold;
+				font-family: Arial;
 }
 
 .hot a{
 				display: block;
 				margin-left: -25px;
 				text-decoration: none;
-				font-weight: bold;
-				font-size: 16px;
+				font-family: Helvetica;
+				font-weight
+				font-size: 12.5px;
 				color: #ff5f2b;
 				padding-bottom: 20px;
 }
@@ -291,6 +293,10 @@ hr.rounded {
 				background-color: #121d6e;
 }
 
+.pagination-width{
+	max-width: 80%;
+}
+
 #myBtn{
 	display: none;
 	position: fixed;
@@ -299,7 +305,7 @@ hr.rounded {
 	z-index: 99;
 	border: none;
 	outline: none;
-	background-color: blue;
+	background-color: #0d6efd;
 	color: whitesmoke;
 	cursor: pointer;
 	padding: 15px;
@@ -309,6 +315,30 @@ hr.rounded {
 
 #myBtn:hover{
 	background-color: #555;
+}
+
+.title-box{
+	width: 85%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.title-box h3{
+	font-weight: bold;
+	font-size: 18px;
+	margin-bottom: -10px;
+	margin-left: -20px;
+}
+
+.title-box .card-body{
+	text-align: center;
+}
+
+.title-box .card-body li{
+	margin: 0 auto;
+	list-style: none;
+	display: inline-block;
+	margin: 10px;
 }
 
 footer{
