--- a/CSS/style.css
+++ b/CSS/style.css
@@ -100,8 +100,8 @@ body{
 				margin: 20px auto;				
 				padding: 5px;
 				height: auto;
-				min-height: 300px;
-				max-height: 350px;
+				min-hight: 300px;
+				max-heght: 350px;
 				overflow: auto;
 				box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.2);
 }
@@ -121,7 +121,7 @@ body{
 }
 
 .detailse p{
-				font-family: 'arial', monospace;
+				font-family: arial, monospace;
 				word-spacing: 1px;
 				font-size: 14.5px;
 				padding-left: 10px;
@@ -132,7 +132,7 @@ body{
 }
 
 .details p{
-				font-family: 'arial', monospace;
+				font-family: arial, monospace;
 				word-spacing: 1px;
 				font-size: 14.5px;
 				padding-left: 10px;
@@ -151,12 +151,62 @@ body{
 				font-size: 15.5px;
 }
 
+.about-dlcf img{
+	float: right;
+	margin-left: 20px;
+	width: 50%;
+}
+
+.about-dlcf p{
+	text-align: justify;
+}
+
+.about-dlcf h3, .weekly-activities h3{
+	text-align: center;
+	font-size: 20px;
+	font-weiht: 600; 
+	font-family: Helvetica;
+	color: #121d6e;
+}
+
+.weekly-activities{
+	width: 95%;
+	text-align: center;
+}
+
+.weekly-activities p{
+	width: 60%;
+	font-size: 12px;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.weekly-activities h4{
+	text-align: center;
+	font-size: 14px;
+	font-family: Helvetica;
+}
+
+.img8capt{
+	widh: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.weekly-activities img{
+	width: 80%;
+	border: 0px solid none;
+	border-radius: 5px;
+}
+
 hr.rounded {
   border-top: 6px solid #b9c2de ;
   border-radius: 5px;
  }
 
 .location{
+				 clear: both;
 				 width: 90%;
 				 background-color: white;
 				 min-height: 200px;
@@ -172,6 +222,7 @@ hr.rounded {
 				text-align: center;
 				font-family: Helvetica;
 				color: #121d6e;
+				font-size: 20px;
 				
 }
 
@@ -179,19 +230,28 @@ hr.rounded {
    
 				color: #121d6e ;
 				padding-left: 20px;
-				
-				font-size: 20px;
+				font-weight: bold;
+				font-size: 16px;
 				font-family: Helvetica;
 }
 
-.location h5,a{
-				padding-left: 10px;
+.location h5 a{
+				padding-left: 0px;
 				text-indent: 35px;
 				margin-top: -15px;
-				font-family: Arial;
+				font-family: Helvetica;
 				color: #ff5415;
-				line-height: 30px;
+				line-height: 18px;
 				text-decoration: none;
+				font-size: 14px;
+}
+
+.cluster{
+	width: 33%;
+	float: left;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .contacts{
@@ -293,10 +353,6 @@ hr.rounded {
 				background-color: #121d6e;
 }
 
-.pagination-width{
-	max-width: 80%;
-}
-
 #myBtn{
 	display: none;
 	position: fixed;
@@ -349,6 +405,7 @@ footer{
 				margin: 0 -8px 0 -8px;
 				color: white;
 				font-weight: normal;
+				font-size: 12.5px;
 				border-top: #ff5f2b 3px solid;
 		
 }
@@ -378,4 +435,33 @@ ul.breadcrumb li a:hover {
   text-decoration: underline;
 }
  */
- 
+
+@media only screen and (max-width: 550px ) {
+	.location{
+				 width: 90%;
+				 background-color: white;
+				 min-height: 200px;
+				 bordr: 1.5px solid #121d6e;
+				 border-radius: 5px;
+				 margin: 20px auto;				
+		 		 padding: 5px;
+				 height: auto;
+				 box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.2);
+}
+	.cluster{
+		float: none;
+		width: 90%;
+		text-align: left;
+	}
+ }
+
+@media only screen and (min-width: 600px ) {
+	.img8capt{
+		float: right;
+		width: 33%;
+	}
+
+	.weekly-activities p{
+		width: 90%;
+	}
+}
