--- a/CSS/style.css
+++ b/CSS/style.css
@@ -161,7 +161,7 @@ body{
 	text-align: justify;
 }
 
-.about-dlcf h3, .weekly-activities h3{
+.about-dlcf h3, .weekly-activities h3, .pastors h3{
 	text-align: center;
 	font-size: 20px;
 	font-weiht: 600; 
@@ -196,8 +196,21 @@ body{
 
 .weekly-activities img{
 	width: 80%;
+	height: auto;
 	border: 0px solid none;
 	border-radius: 5px;
+}
+
+.pastors{
+	width: 95%;
+	text-align: center;
+}
+
+.pastors img{
+	width: 150px;
+	height: 150px;
+	border: 0px solid none;
+	border-radius: 100%;
 }
 
 hr.rounded {
@@ -457,11 +470,18 @@ ul.breadcrumb li a:hover {
 
 @media only screen and (min-width: 600px ) {
 	.img8capt{
-		float: right;
+		float: left;
 		width: 33%;
 	}
 
 	.weekly-activities p{
 		width: 90%;
+	}
+}
+
+@media only screen and (min-width: 1100px ) {
+	.big-width{
+		float: left;
+		width: 25%;
 	}
 }
