--- a/CSS/library.css
+++ b/CSS/library.css
@@ -10,16 +10,16 @@
 }
 
 .card a{
-  width: 130px;
-  background-color: #0d6efd;
+  widh: 130px;
+  backgrond-color: #0d6efd;
   text-decoration: none;
-  color: whitesmoke;
+  color: #0d6efd;
   font-weight: bold;
-  padding: 10px;
+  paddin: 10px;
   text-align: center;
-  border: 1px solid #0d6efd;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+  bordr: 1px solid #0d6efd;
+  borer-radius: 4px;
+  boxshadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
 }
 
 .card-text{
@@ -49,6 +49,11 @@
 
 .card-title{
 	font-weight: bold;
+	font-size: 14px;
+}
+
+.card-text{
+	font-size: 12.5px;
 }
 
 .secttion{
