--- a/CSS/style.css
+++ b/CSS/style.css
@@ -151,6 +151,10 @@ body{
 				font-size: 15.5px;
 }
 
+.details h4{
+	margin-left: -20px;
+}
+
 .about-dlcf img{
 	float: right;
 	margin-left: 20px;
@@ -211,6 +215,10 @@ body{
 	height: 150px;
 	border: 0px solid none;
 	border-radius: 100%;
+}
+
+.Catalogue h3{
+	font-size: 16px;
 }
 
 hr.rounded {
@@ -311,6 +319,28 @@ hr.rounded {
 
 .All:hover{
 				font-size: 20px;
+}
+
+.sermons p{
+	margin-bottom: -12px;
+}
+
+.sermons h4{
+	margin-bottom: -3px;
+}
+
+.sermon-download{
+  with: 130px;
+  backgroundcolor: #0d6efd;
+  text-decoration: none;
+  color: #606060;
+  margin-bottom: 15px;
+  font-weight: bold;
+  paddig: 10px;
+  text-align: center;
+  bordr: 1px solid #0d6efd;
+  border-adius: 4px;
+  box-shaow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
 }
 
 /*  {
@@ -483,5 +513,26 @@ ul.breadcrumb li a:hover {
 	.big-width{
 		float: left;
 		width: 25%;
+	}
+}
+
+@media only screen and (min-width: 360px ) {
+	.sermons-float{
+		float: left;
+		width: 50%;
+	}
+}
+
+@media only screen and (min-width: 640px ) {
+	.sermons-float{
+		float: left;
+		width: 25%;
+	}
+}
+
+@media only screen and (min-width: 1100px ) {
+	.sermons-float{
+		float: left;
+		width: 20%;
 	}
 }
