--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,9 +46,9 @@ body{
   background: #9d9dab; 
 }
 
-/* #sect a{
+#sect a{
     
-} */
+}
 
 #sect a.active {
   color: #f1643c;
@@ -60,14 +60,14 @@ body{
   color: #555;
   font-size: 18px;
   font-weight: bold;
-  }
+  }		 
   
 .display-text{
 				color:white;
 				font-family: "Sofia", cursive;
 				font-weight: bold;
 				text-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
-				font-size: 30px;
+				font-size: 18px;
 }
 
 .display-text h1{
@@ -100,8 +100,8 @@ body{
 				margin: 20px auto;				
 				padding: 5px;
 				height: auto;
-				min-height: 300px;
-				max-height: 350px;
+				min-hight: 300px;
+				max-heght: 350px;
 				overflow: auto;
 				box-shadow: 2px 3px 10px 0 rgba(0, 0, 0, 0.2);
 }
@@ -148,7 +148,7 @@ body{
 .details h2, h3, h5, h4{
 				padding-left: 20px;
 				padding-top: -3px;
-				font-size: 15.5px;
+				font-size: 14.5px;
 }
 
 .details h4{
@@ -167,8 +167,8 @@ body{
 
 .about-dlcf h3, .weekly-activities h3, .pastors h3{
 	text-align: center;
-	font-size: 20px;
-	font-weight: 600; 
+	font-size: 16px;
+	font-weiht: 600; 
 	font-family: Helvetica;
 	color: #121d6e;
 }
@@ -193,7 +193,7 @@ body{
 }
 
 .img8capt{
-	width: 80%;
+	widh: 80%;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -217,10 +217,6 @@ body{
 	border-radius: 100%;
 }
 
-.Catalogue h3{
-	font-size: 16px;
-}
-
 hr.rounded {
   border-top: 6px solid #b9c2de ;
   border-radius: 5px;
@@ -231,7 +227,7 @@ hr.rounded {
 				 width: 90%;
 				 background-color: white;
 				 min-height: 200px;
-				 border: 1.5px solid #121d6e;
+				 bordr: 1.5px solid #121d6e;
 				 border-radius: 5px;
 				 margin: 20px auto;				
 		 		 padding: 5px;
@@ -330,17 +326,17 @@ hr.rounded {
 }
 
 .sermon-download{
-  width: 130px;
-  background-color: #0d6efd;
+  with: 130px;
+  backgroundcolor: #0d6efd;
   text-decoration: none;
   color: #606060;
   margin-bottom: 15px;
   font-weight: bold;
-  padding: 10px;
+  paddig: 10px;
   text-align: center;
-  border: 1px solid #0d6efd;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+  bordr: 1px solid #0d6efd;
+  border-adius: 4px;
+  box-shaow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
 }
 
 /*  {
@@ -440,31 +436,11 @@ hr.rounded {
 	margin: 10px;
 }
 
-#preloader{
-	background: whitesmoke url(/img/loader2.gif) no-repeat center center;
-	background-size: 15%;
-	height: 100vh;
-	width: 100%;
-	position: fixed;
-	z-index: 100;
-}
-
-#bible-verse{
-	background-color: #f6f6f6;
-	width: 95%;
-	border: 0px solid #121d6e;
-	border-radius: 5px;
-	margin: 20px auto;				
-	padding: 5px;
-	height: auto;
-	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
-}
-
 footer{
 				background-color: #121d6e;
 				text-align: center;
 				padding:-30px 30px 5px 30px;
-				padding-top: -30px;
+				paddng-top: -30px;
 				margin: 0 -8px 0 -8px;
 				color: white;
 				font-weight: normal;
@@ -504,7 +480,7 @@ ul.breadcrumb li a:hover {
 				 width: 90%;
 				 background-color: white;
 				 min-height: 200px;
-				 border: 1.5px solid #121d6e;
+				 bordr: 1.5px solid #121d6e;
 				 border-radius: 5px;
 				 margin: 20px auto;				
 		 		 padding: 5px;
